--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "backend"
 version = "0.1.0"
-description = "Add your description here"
+description = "Physical AI & Humanoid Robotics"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = []
